se implementa clases

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <div id="letras"></div>
     <input type="text" id="palabra" />
     <div id="mensaje"></div>
-    <script src="./logic.js"></script>
+    <script src="./javascript/index.js" type="module"></script>
   </body>
 </html>
